# Arena

./: .gitignore  .gitmodules  LICENSE  README.md  Structure.mermaid  __init__.py  arena.py  arena_report.json  experiment_runner.py  experiments  full_integration_report_20251120_184407.json  pyproject.toml  requirements.txt  simple_web_viewer.py
arena/: __init__.py  cli.py  config.py  simulation.py
arena/experiments/exp_001/: .keep
config/: __init__.py  arena_config.py
core/: __init__.py  agent_orchestrator.py  arena_manager.py  simulation_engine.py
examples/: __init__.py  full_integration_example.py  full_simulation_example.py  simple_simulation.py
experiments/: .keep  EXPERIMENTAL_DESIGN.md  __init__.py  ab_testing.py  evolution_tracker.py  experiment_runner.py  simple_web_viewer.py
metrics/: __init__.py  performance_monitor.py  virality_tracker.py
scheduling/: __init__.py  resource_manager.py  task_scheduler.py
tests/: __init__.py  test_arena_basic.py
trace_logging/: USAGE.md  __init__.py  analysis.py  cli.py  config.py  context.py  example.py  logger.py  manager.py  requirements.txt
