[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arena"
version = "0.1.0"
description = "Arena - Social Arena orchestrator integrating Agent, Feed, and Recommendation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Social Arena"},
]
keywords = ["social-media", "simulation", "agents", "recommendation-system", "twitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "agent @ git+https://github.com/Social-Arena/Agent.git@dev",
    "feed @ git+https://github.com/Social-Arena/Feed.git@dev",
    "recommendation @ git+https://github.com/Social-Arena/Recommendation.git@dev",
]

[project.urls]
Homepage = "https://github.com/Social-Arena/Arena"
Repository = "https://github.com/Social-Arena/Arena"

[tool.setuptools]
packages = ["arena"]


